--- a/hallo.html
+++ b/hallo.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to my website!</h1>
+    <h1 style="color: blue;">Welcome to my website!</h1>
     Hello, world!
     <h2>I love my life</h2>
 </body>
