--- a/hallo.html
+++ b/hallo.html
@@ -7,11 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <h1>Welcome to my website!!</h1>
-=======
-    <h1 style="color: blue;">Welcome to my website!</h1>
->>>>>>> 88139a4510493a8231c769b6e74be867fd5bebfd
+    <h1 style="color: blue;">Welcome to my website!!!</h1>
     Hello, world!
     <h2>I love my life</h2>
 </body>
